--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             this.load.image('ring', 'assets/ring.png');
             this.load.image('tiles', 'assets/pacman-tiles.png');
             this.load.spritesheet('dory', 'assets/dory.png', 32, 32);
-            this.load.tilemap('map', 'assets/pacman-map1.json', null, Phaser.Tilemap.TILED_JSON);
+            this.load.tilemap('map', 'assets/pacmanmap1.json', null, Phaser.Tilemap.TILED_JSON);
 
             //  Needless to say, graphics (C)opyright Namco
 
