--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Pacman</title>
     <meta charset="utf-8">
     <style>
+        
+        <audio   autoplay loop> 
+		    <source src="assets/gameSong.mp3" type="audio/mpeg">
+        </audio>
+        
         body {
             margin: 0;
             padding: 0;
