--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Aggelos</title>
+    <title>Pacman</title>
     <meta charset="utf-8">
     <style>
         
         <audio   autoplay loop> 
-		    <source src="assets/gameSong.mp3" type="audio/mpeg">
+		<source src="assets/gameSong.mp3" type="audio/mpeg">
         </audio>
         
         body {
