--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         }
     </style>
 	<audio   autoplay loop> 
-		<source src="assets/gameSong.mp3" type="audio/mpeg">
+		<source src="assets/gameSong.mp3" type="audio/mp3">
         </audio>
         
     <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
