--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             padding: 0;
             background-color: #000;
         }
+	    
+	    h3 {color: white;}
     </style>
 	<audio   autoplay loop> 
 		<source src="assets/gameSong.mp3" type="audio/mp3">
@@ -18,6 +20,8 @@
     <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
 </head>
 <body>
+	
+	<h3 id="scoreTxt" align="center"></h3>
 
     <script type="text/javascript">
 
