--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <script type="text/javascript">
 	   
-	var score;
+	var score = 0;
 
     var game = new Phaser.Game(448, 496, Phaser.AUTO);
 
