--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
 </head>
 <body>
 	
+	<h3 id="liveTxt" align="center"></h3>
 	<h3 id="scoreTxt" align="center"></h3>
 
     <script type="text/javascript">
 	   
 	var score = 0;
+	var lives = 3;
+	    
+	document.getElementById("livesTxt").innerHTML ="Remaining Lives: " + lives;
 
     var game = new Phaser.Game(448, 496, Phaser.AUTO);
 
