--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 	
-	<h3 id="liveTxt" align="center"></h3>
+	<h3 id="livesTxt" align="center"></h3>
 	<h3 id="scoreTxt" align="center"></h3>
 
     <script type="text/javascript">
